# Lem_in

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  author
inc/: error_message.h  lem_in.h
src/: add_vertex.c  bilst_length_cmp.c  breadth_first_search.c  find_corridor.c  find_solutions.c  init.c  main.c  parsing.c  parsing_add_edge.c  parsing_add_vertex.c  parsing_last_chek.c  print.c  print_current_position_ants.c  print_result.c  print_result_start_step_ants.c  print_result_start_step_ants_2.c  print_result_start_step_ants_3.c  print_result_step_ants_room.c  rm_rs_links.c  solution.c  terminate.c
subject/: generator  map.txt  valid01.map
